Fix text alignment

--- a/css/characters.css
+++ b/css/characters.css
@@ -47,6 +47,7 @@
     }
   
     div.content {
+        text-align: center;
         padding: 20px;
     }
 
@@ -112,7 +113,7 @@
     margin-bottom: 1rem;
     }
 
-    li {
+    div.all-day-actions li {
         display: flex;
         align-items: center;
         margin-bottom: 10px;
